# quddy

./: .gitignore  Cargo.toml  README.md
src/: config.rs  constants.rs  main.rs
src/capture/: mod.rs  screenshot.rs
src/client/: mod.rs
src/daemon/: ipc.rs  mod.rs
src/ocr/: mod.rs  preprocessor.rs  tesseract.rs
src/translate/: google.rs  mod.rs
