[package]
name = "quddy_ocrtranslator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
image = "0.25.9"
leptess = "0.14.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.10"
serde_json = "1.0.149"
toml = "1.0.1"
urlencoding = "2.1.3"
